Fix side-bar and content spacing. Align field set. wrap input fields.

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,91 @@
 body {
+    padding: 0;
+    margin: 0;
     font-family: 'Roboto Slab', serif;
     font-family: 'Ubuntu', sans-serif;
     display: flex;
+    gap: 0;
 }
 
 
-* {
+/* * {
     border: 1px solid black;
+} */
+
+.form-content {
+    padding: 0;
+    margin: 0;
 }
 
-.page-content {
+form {
+    min-width: 60%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+fieldset {
+    border: none;
+}
+
+.welcome-content {
+    padding: 0 150px 20px 40px;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+p {
+    font-size: 22px;
+    font-weight: 300;
+}
+
+label {
+    font-size: 10px;
+    letter-spacing: 0.2em;
+}
+label, input {
+    display: block;
+}
+
+.form-set {
+    /* background-color: yellowgreen; */
+    padding: 0 100px 20px 40px;
+    box-shadow: 0 8px 12px -12px black; 
+}
+
+.form-fields {
+    /* background-color: aquamarine; */
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    column-gap: 60px;
+    
+}
+
+/* .data-fields {
+    
+    min-width: 40%;
+} */
+input[type="text"], input[type="email"],input[type="number"],input[type="password"] {
+    border-style: solid;
+    border-color: #E5E7EB;
+    border-radius: 4px;
+    line-height: 20px;
+    width: 200px;    
+}
+input[type="password"]{
+    border: 1px solid red;
+}
+input:focus {
+    outline: none;
+    border: 1px solid #5555e7 ;
+    box-shadow: 0 0 3px  #5555e7;
+}
+.side-bar {
     background-image: url(./images/marc-zimmer-1dNujhlCTYQ-unsplash.jpg);
+    min-width: 35%;
     height: 100vh;
     background-size: cover;
    
